// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Country Sort Adapter should sort United Kingdom to top 1`] = `
[
  {
    "label": "United Kingdom",
    "value": "United Kingdom",
  },
  {
    "label": "Country A",
    "value": "Country A",
  },
  {
    "label": "Country B",
    "value": "Country B",
  },
]
`;

exports[`Country Sort Adapter should transform and sort country data 1`] = `
[
  {
    "label": "Country A",
    "value": "Country A",
  },
  {
    "label": "Country B",
    "value": "Country B",
  },
  {
    "label": "Country C",
    "value": "Country C",
  },
]
`;
